--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,11 @@
       <artifactId>kubernetes-client</artifactId>
       <version>1.3.46</version>
     </dependency>
-    
+    <dependency>
+      <groupId>io.fabric8</groupId>
+      <artifactId>openshift-client</artifactId>
+      <version>1.3.46</version>
+    </dependency>
     <!-- testing -->
     <dependency>
       <groupId>org.apache.camel</groupId>
